--- a/farmer-signup.html
+++ b/farmer-signup.html
@@ -309,7 +309,7 @@
         <div class="container header-container">
             <a href="index.html" class="logo">
                 <div class="logo-img">
-                    <img src="images/logo.webp" alt="Aaron Agronomy Services Logo">
+                    <img src="aaron logo.webp" alt="Aaron Agronomy Services Logo">
                     <div class="img-fallback" style="display: none;">
                         <i class="fas fa-leaf"></i>
                     </div>
@@ -327,7 +327,7 @@
                     <li><a href="products.html">Products</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="farm-assessment.html">Farm Assessment</a></li>
-                    <li><a href="farmer-login.html">Farmer Login</a></li>
+                    <li><a href="LOGINS.html">Farmer Login</a></li>
                     <li><a href="farmer-signup.html" class="active btn btn-small">Register Now</a></li>
                 </ul>
             </nav>
@@ -697,7 +697,7 @@
             <p style="margin-bottom: 30px; max-width: 700px; margin-left: auto; margin-right: auto;">
                 Login to access your dashboard, view reports, and manage your farm services.
             </p>
-            <a href="farmer-login.html" class="btn" style="background-color: white; color: var(--primary-green);">
+            <a href="LOGINS.html" class="btn" style="background-color: white; color: var(--primary-green);">
                 <i class="fas fa-sign-in-alt"></i> Login to Your Account
             </a>
         </div>
@@ -1201,3 +1201,4 @@
     </script>
 </body>
 </html>
+
