--- a/LOGINS.html
+++ b/LOGINS.html
@@ -1369,8 +1369,9 @@
             </div>
         </div>
     </div>
-
-    <script src="main.js"></script>
+<script src="js/main.js"></script>
+    
 </body>
 </html>
+
 
