--- a/contact.html
+++ b/contact.html
@@ -645,7 +645,7 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/contact.js"></script>
     <script>
         // Contact Form Validation and Submission
         <script>
@@ -805,5 +805,6 @@ const response= await
 </body>
 
 </html>
+
 
 
