--- a/contact.html
+++ b/contact.html
@@ -230,6 +230,8 @@
             }
         }
     </style>
+    <script src="js/main.js"defer></script>
+      <script src="js/contact.js"></script
 </head>
 <body>
     <!-- Header -->
@@ -645,7 +647,7 @@
         </div>
     </footer>
 
-    <script src="js/contact.js"></script>
+  
     <script>
         // Contact Form Validation and Submission
         <script>
@@ -805,6 +807,7 @@ const response= await
 </body>
 
 </html>
+
 
 
 
