--- a/contact.html
+++ b/contact.html
@@ -230,8 +230,7 @@
             }
         }
     </style>
-    <script src="js/main.js"defer></script>
-      <script src="js/contact.js"></script
+    
 </head>
 <body>
     <!-- Header -->
@@ -648,7 +647,8 @@
     </footer>
 
   
-    <script>
+    <script src="js/main.js"defer></script>
+      <script src="js/contact.js"></script>
         // Contact Form Validation and Submission
         <script>
 document.getElementById("contactForm").addEventListener("submit", async function (e){
@@ -807,6 +807,7 @@ const response= await
 </body>
 
 </html>
+
 
 
 
