--- a/LOGINS.html
+++ b/LOGINS.html
@@ -630,6 +630,15 @@
     </style>
 </head>
 <body>
+     <header>
+        <div class="container header-container">
+            <a href="index.html" class="logo">
+                <div class="logo-img">
+                    <img src="aaron logo.webp" alt="Aaron Agronomy Services Logo" onerror="this.style.display='none'">
+        
+                </div>  
+            </a>
+        </header>
     <!-- Header -->
     <header class="dashboard-header" style="display: none;">
         <div class="container header-content">
@@ -2733,3 +2742,4 @@
     </script>
 </body>
 </html>
+
