--- a/contact.html
+++ b/contact.html
@@ -662,7 +662,7 @@ document.getElementById("contactForm").addEventListener("submit", async function
   };
 
   try {
-    const response = await fetch("https://agronomy-backend-ehk1.onrender.com/contact", {
+    const response = await fetch("https://agronomy-backend-ehk1.onrender.com/api/contact", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify(formData)
@@ -680,6 +680,7 @@ document.getElementById("contactForm").addEventListener("submit", async function
        </body>
 
 </html>
+
 
 
 
