--- a/LOGINS.html
+++ b/LOGINS.html
@@ -1142,7 +1142,7 @@ document.getElementById("registerForm").addEventListener("submit", async (e) => 
             </div>
         </div>
     </div>
-
+<script src="js/logins.js"></script>
     <script>
         // Agronomy System
         class AgronomySystem {
@@ -3288,6 +3288,7 @@ document.getElementById("registerForm").addEventListener("submit", async (e) => 
     </script>
 </body>
 </html>
+
 
 
 
