--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <i class="fas fa-leaf"></i>
                     </div>
                 </div>
-                <div class="logo-text">Aaron <span>Agronomy</span></div>
+                <div class="logo-text">Aaron <span>Agronomy Services</span></div>
             </a>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -223,4 +223,5 @@
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
