--- a/products.html
+++ b/products.html
@@ -57,7 +57,7 @@
                         <i class="fas fa-leaf"></i>
                     </div>
                 </div>
-                <div class="logo-text">Aaron <span>Agronomy</span></div>
+                <div class="logo-text">Aaron <span>Agronomy Services</span></div>
             </a>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -332,4 +332,5 @@
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
