--- a/services.html
+++ b/services.html
@@ -88,7 +88,7 @@
                         <i class="fas fa-leaf"></i>
                     </div>
                 </div>
-                <div class="logo-text">Aaron <span>Agronomy</span></div>
+                <div class="logo-text">Aaron <span>Agronomy Services</span></div>
             </a>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -428,4 +428,5 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
