--- a/farm-assessment.html
+++ b/farm-assessment.html
@@ -160,7 +160,7 @@
                         <i class="fas fa-leaf"></i>
                     </div>
                 </div>
-                <div class="logo-text">Aaron <span>Agronomy</span></div>
+                <div class="logo-text">Aaron <span>Agronomy Services</span></div>
             </a>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -986,3 +986,4 @@
     </script>
 </body>
 </html>
+
