--- a/about.html
+++ b/about.html
@@ -234,7 +234,7 @@
                         <i class="fas fa-leaf"></i>
                     </div>
                 </div>
-                <div class="logo-text">Aaron <span>Agronomy</span></div>
+                <div class="logo-text">Aaron <span>Agronomy Services</span></div>
             </a>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -630,3 +630,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
