--- a/contact.html
+++ b/contact.html
@@ -243,7 +243,7 @@
                         <i class="fas fa-leaf"></i>
                     </div>
                 </div>
-                <div class="logo-text">Aaron <span>Agronomy</span></div>
+                <div class="logo-text">Aaron <span>Agronomy Services</span></div>
             </a>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -680,6 +680,7 @@ document.getElementById("contactForm").addEventListener("submit", async function
        </body>
 
 </html>
+
 
 
 
