--- a/products.html
+++ b/products.html
@@ -118,7 +118,7 @@
                         <p class="product-description">Good quality pixies suitable for local markets and processing. Excellent value for money.</p>
                         <div class="price-item">
                             <span class="price-item-name">Per Kg</span>
-                            <span class="price-item-price">150 KSh</span>
+                            <span class="price-item-price">130 KSh</span>
                         </div>
                         <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
                     </div>
@@ -132,8 +132,8 @@
                         <h3>Bulk Pixies</h3>
                         <p class="product-description">For processing and juice making. Available in large quantities at wholesale prices.</p>
                         <div class="price-item">
-                            <span class="price-item-name">Per 50Kg Bag</span>
-                            <span class="price-item-price">7,500 KSh</span>
+                            <span class="price-item-name">over 100Kg Bag</span>
+                            <span class="price-item-price">sh120 per kg</span>
                         </div>
                         <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
                     </div>
@@ -334,3 +334,4 @@
 </body>
 
 </html>
+
