--- a/services.html
+++ b/services.html
@@ -193,7 +193,7 @@
                         <img src="avoseed.webp" alt="One Acre Pixie Package">
                     </div>
                     <div class="product-info">
-                        <h3>Avocado Seedlings</h3>
+                        <h3>One Acre Pixie Package</h3>
                         <p class="product-description">Hass and Fuerte varieties. Grafted for early fruiting, disease-resistant with excellent yield potential.</p>
                         <div class="price-list">
                             <div class="price-item">
@@ -218,7 +218,7 @@
                         <img src="manseed.webp" alt="One acre Lemon Package">
                     </div>
                     <div class="product-info">
-                        <h3>Mango Seedlings</h3>
+                        <h3>One acre Lemon Package</h3>
                         <p class="product-description">Apple, Ngowe, and Kent varieties. Fast-growing with high yield potential. Grafted for early fruiting.</p>
                         <div class="price-list">
                             <div class="price-item">
@@ -262,7 +262,7 @@
                         <img src="manseed.webp" alt="One acre Mango Package">
                     </div>
                     <div class="product-info">
-                        <h3>Mango Seedlings</h3>
+                        <h3>One acre Mango Package</h3>
                         <p class="product-description">Apple, Ngowe, and Kent varieties. Fast-growing with high yield potential. Grafted for early fruiting.</p>
                         <div class="price-list">
                             <div class="price-item">
@@ -500,6 +500,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
