--- a/services.html
+++ b/services.html
@@ -194,11 +194,18 @@
                     </div>
                     <div class="product-info">
                         <h3>One Acre Pixie Package</h3>
-                        <p class="product-description">Hass and Fuerte varieties. Grafted for early fruiting, disease-resistant with excellent yield potential.</p>
+                        <p class="product-description">SERVICES.</p>
+                        <P>Farm Layout and planting</P>
+                        <p>Manuaring/mixing</p>
+                        <p>Digging holes</p>
+                        <p>Grafted seedlings</p>
+                        <p>Spray programs</p>
+                        <p>Technical Agronomical Support</p>
+                        <p>Pesticides and fungicides</p>
                         <div class="price-list">
                             <div class="price-item">
-                                <span class="price-item-name">per seedling</span>
-                                <span class="price-item-price">200 KSh</span>
+                                <span class="price-item-name">FOR THE PACKAGE</span>
+                                <span class="price-item-price">104,000 KSh</span>
                             </div>
                             <div class="price-item">
                                 <span class="price-item-name"></span>
@@ -500,6 +507,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
