--- a/services.html
+++ b/services.html
@@ -194,26 +194,27 @@
                     </div>
                     <div class="product-info">
                         <h3>One Acre Pixie Package</h3>
-                        <p class="product-description">SERVICES.</p>
-                        <P>Farm Layout and planting</P>
-                        <p>Manuaring/mixing</p>
-                        <p>Digging holes</p>
-                        <p>Grafted seedlings</p>
-                        <p>Spray programs</p>
-                        <p>Technical Agronomical Support</p>
-                        <p>Pesticides and fungicides</p>
+                        <B><p class="product-description">SERVICES.</p></B>
+                        <P>.Farm Layout and planting</P>
+                        <p>.Manuaring/mixing</p>
+                        <p>.Digging holes</p>
+                        <p>.Grafted seedlings</p>
+                        <p>.Spray programs</p>
+                        <p>.Technical Agronomical Support</p>
+                        <p>.Pesticides and fungicides</p>
+                        <P></P>
                         <div class="price-list">
                             <div class="price-item">
                                 <span class="price-item-name">FOR THE PACKAGE</span>
-                                <span class="price-item-price">104,000 KSh</span>
+                                <span class="price-item-price"></span>
                             </div>
                             <div class="price-item">
                                 <span class="price-item-name"></span>
                                 <span class="price-item-price"></span>
                             </div>
                             <div class="price-item">
-                                <span class="price-item-name">Bulk (100+ seedlings)</span>
-                                <span class="price-item-price">200 ksh</span>
+                                <span class="price-item-name">104,000</span>
+                                <span class="price-item-price">ksh</span>
                             </div>
                         </div>
                         <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
@@ -507,6 +508,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
