--- a/services.html
+++ b/services.html
@@ -205,7 +205,7 @@
                         <P></P>
                         <div class="price-list">
                             <div class="price-item">
-                                <span class="price-item-name">FOR THE PACKAGE</span>
+                               <B> <span class="price-item-name">FOR THE PACKAGE</span></B>
                                 <span class="price-item-price"></span>
                             </div>
                             <div class="price-item">
@@ -213,8 +213,8 @@
                                 <span class="price-item-price"></span>
                             </div>
                             <div class="price-item">
-                                <span class="price-item-name">104,000</span>
-                                <span class="price-item-price">ksh</span>
+                               <B><span class="price-item-name">104,000</span></B>
+                               <B> <span class="price-item-price">KSH</span></B>
                             </div>
                         </div>
                         <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
@@ -508,6 +508,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
