--- a/services.html
+++ b/services.html
@@ -213,7 +213,7 @@
                                 <span class="price-item-price"></span>
                             </div>
                             <div class="price-item">
-                               <B><span class="price-item-name">104,000</span></B>
+                             <h3><B><span class="price-item-name">104,000</span></B></h3>
                                <B> <span class="price-item-price">KSH</span></B>
                             </div>
                         </div>
@@ -508,6 +508,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
