--- a/services.html
+++ b/services.html
@@ -213,8 +213,8 @@
                                 <span class="price-item-price"></span>
                             </div>
                             <div class="price-item">
-                             <h3><B><span class="price-item-name">104,000</span></B></h3>
-                               <B> <span class="price-item-price">KSH</span></B>
+                             <h3><B><span class="price-item-name">104,000 KSH</span></B></h3>
+                               <B> <span class="price-item-price"></span></B>
                             </div>
                         </div>
                         <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
@@ -227,20 +227,20 @@
                     </div>
                     <div class="product-info">
                         <h3>One acre Lemon Package</h3>
-                        <p class="product-description">Apple, Ngowe, and Kent varieties. Fast-growing with high yield potential. Grafted for early fruiting.</p>
+                       <B> <p class="product-description">SERVICES.</p></B>
+                        <P>.Farm Layout and planning</P>
+                        <p>.Manuaring/mixing</p>
+                        <p>.Digging holes</p>
+                        <p>.Seedlings Grafted later</p>
+                        <p>.Spray programs</p>
+                        <p>.Technical Agronomical Support</p>
+                        <p>.Pesticides and fungicides</p>
                         <div class="price-list">
                             <div class="price-item">
-                                <span class="price-item-name">Apple Mango</span>
-                                <span class="price-item-price">200 KSh</span>
-                            </div>
-                            <div class="price-item">
-                                <span class="price-item-name">Ngowe Mango</span>
-                                <span class="price-item-price">200 KSh</span>
-                            </div>
-                            <div class="price-item">
-                                <span class="price-item-name">Kent Mango</span>
-                                <span class="price-item-price">200 KSh</span>
-                            </div>
+                              <B>  <span class="price-item-name">FOR THE PACKAGE</span></B>
+                               <B><H3> <span class="price-item-price">84,000 KSh</span></H3></B>
+                           
+                
                         </div>
                         <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
                     </div>
@@ -508,6 +508,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
