--- a/services.html
+++ b/services.html
@@ -252,15 +252,19 @@
                     </div>
                     <div class="product-info">
                         <h3>One acre Pawpaw Package</h3>
-                        <p class="product-description">Sweet and colorful pixie seedlings. Ideal for both small-scale and commercial farming. Excellent market value.</p>
+                        <B></B><p class="product-description">SERVICES</p></B>
+                        <P>.Farm Layout and planning</P>
+                        <p>.Manuaring/mixing</p>
+                        <p>.Digging holes</p>
+                        <p>.F1 Seddlings</p>
+                        <p>.Spray programs</p>
+                        <p>.Technical Agronomical Support</p>
+                        <p>.Pesticides and fungicides</p>
                         <div class="price-item">
-                            <span class="price-item-name">Per Seedling</span>
-                            <span class="price-item-price">200 KSh</span>
+                           <B> <span class="price-item-name">FOR THE PACKAGE</span></B>
+                           <H3><B> <span class="price-item-price">225,000 KSh</span></B></H3>
                         </div>
-                        <div class="price-item">
-                            <span class="price-item-name">Bulk (50+ seedlings)</span>
-                            <span class="price-item-price">200 KSh each</span>
-                        </div>
+                        
                         <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
                     </div>
                 </div>
@@ -508,6 +512,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
