--- a/services.html
+++ b/services.html
@@ -240,7 +240,7 @@
                               <B>  <span class="price-item-name">FOR THE PACKAGE</span></B>
                                <B><H3> <span class="price-item-price">84,000 KSh</span></H3></B>
                            
-                
+                            </div>
                         </div>
                         <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
                     </div>
@@ -512,6 +512,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
