--- a/services.html
+++ b/services.html
@@ -226,7 +226,7 @@
                         <img src="manseed.webp" alt="One acre Lemon Package">
                     </div>
                     <div class="product-info">
-                        <h3>One acre Lemon Package</h3>
+                        <h3>One Acre Lemon Package</h3>
                        <B> <p class="product-description">SERVICES.</p></B>
                         <P>.Farm Layout and planning</P>
                         <p>.Manuaring/mixing</p>
@@ -251,8 +251,8 @@
                         <img src="pixseed.webp" alt="Pixie Seedlings">
                     </div>
                     <div class="product-info">
-                        <h3>One acre Pawpaw Package</h3>
-                        <B></B><p class="product-description">SERVICES</p></B>
+                        <h3>One Acre Pawpaw Package</h3>
+                        <B><p class="product-description">SERVICES</p></B>
                         <P>.Farm Layout and planning</P>
                         <p>.Manuaring/mixing</p>
                         <p>.Digging holes</p>
@@ -274,21 +274,21 @@
                         <img src="manseed.webp" alt="One acre Mango Package">
                     </div>
                     <div class="product-info">
-                        <h3>One acre Mango Package</h3>
-                        <p class="product-description">Apple, Ngowe, and Kent varieties. Fast-growing with high yield potential. Grafted for early fruiting.</p>
+                        <h3>One Acre Mango Package</h3>
+                       <B> <p class="product-description">SERVICES</p></B>
+                         <P>.Farm Layout and planning</P>
+                        <p>.Manuaring/mixing</p>
+                        <p>.Digging holes</p>
+                        <p>.Grafted Seedlings</p>
+                        <p>.Spray programs</p>
+                        <p>.Technical Agronomical Support</p>
+                        <p>.Pesticides and fungicides</p>
                         <div class="price-list">
                             <div class="price-item">
-                                <span class="price-item-name">Apple Mango</span>
-                                <span class="price-item-price">200 KSh</span>
+                               <B> <span class="price-item-name">FOR THE PACKAGE</span></B>
+                                <H3><B><span class="price-item-price">86,000 KSH</span></B></H3>
                             </div>
-                            <div class="price-item">
-                                <span class="price-item-name">Ngowe Mango</span>
-                                <span class="price-item-price">200 KSh</span>
-                            </div>
-                            <div class="price-item">
-                                <span class="price-item-name">Kent Mango</span>
-                                <span class="price-item-price">200 KSh</span>
-                            </div>
+                    
                         </div>
                         <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
                     </div>
@@ -512,6 +512,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
