--- a/services.html
+++ b/services.html
@@ -179,7 +179,7 @@
             <div class="product-grid">
                 <div class="product-card">
                     <div class="product-img">
-                        <img src="avoseed.webp" alt="One Acre Pixie Package">
+                        <img src="Pixie Package.png" alt="One Acre Pixie Package">
                     </div>
                     <div class="product-info">
                         <h3>One Acre Pixie Package</h3>
@@ -212,7 +212,7 @@
                 
                 <div class="product-card">
                     <div class="product-img">
-                        <img src="manseed.webp" alt="One acre Lemon Package">
+                        <img src="Lemon Package.png" alt="One acre Lemon Package">
                     </div>
                     <div class="product-info">
                         <h3>One Acre Lemon Package</h3>
@@ -237,7 +237,7 @@
                 
                 <div class="product-card">
                     <div class="product-img">
-                        <img src="pixseed.webp" alt="Pixie Seedlings">
+                        <img src="Pawpaw Package.png" alt="Pixie Seedlings">
                     </div>
                     <div class="product-info">
                         <h3>One Acre Pawpaw Package</h3>
@@ -260,7 +260,7 @@
 
                 <div class="product-card">
                     <div class="product-img">
-                        <img src="manseed.webp" alt="One acre Mango Package">
+                        <img src="Mango Package.png" alt="One acre Mango Package">
                     </div>
                     <div class="product-info">
                         <h3>One Acre Mango Package</h3>
@@ -501,6 +501,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
