--- a/about.html
+++ b/about.html
@@ -445,7 +445,7 @@
                 
                 <div class="team-card">
                     <div class="team-img">
-                        <img src="FN.png" alt="FELIX NTABO">
+                        <img src="Felix.jpeg" alt="FELIX NTABO">
                     </div>
                     <div class="team-info">
                         <h4>FELIX NTABO</h4>
@@ -630,5 +630,6 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
