--- a/about.html
+++ b/about.html
@@ -422,7 +422,7 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-img">
-                        <img src="AARON.JPEG" alt="AARON">
+                        <img src="AARON.jpeg" alt="AARON">
     
                     </div>
                     <div class="team-info">
@@ -663,6 +663,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
