--- a/about.html
+++ b/about.html
@@ -422,13 +422,13 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-img">
-                        <img src="AARON.jpeg" alt="AARON">
+                        <img src="ndisya.jpeg" alt="AARON">
     
                     </div>
                     <div class="team-info">
                         <h4>AARON NDISYA</h4>
                         <div class="team-role">Founder and CEO.</div>
-                        <p>Planning and coordinating daily operations to ensure efficient use of resources and smooth service delivery.</p>
+                        <p>Set the organization’s vision and strategy while providing overall leadership to drive growth, innovation, and sustainability.</p>
                     </div>
                 </div>
 
@@ -439,7 +439,7 @@
                     <div class="team-info">
                         <h4>FELIX NTABO</h4>
                         <div class="team-role">OPERATIONS MANAGER</div>
-                        <p>planning and coordinating daily operations to ensure efficient use of resources and smooth service delivery..</p>
+                        <p>Planning and coordinating daily operations to ensure efficient use of resources and smooth service delivery..</p>
                     </div>
                 </div>
                 
@@ -663,6 +663,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
