--- a/services.html
+++ b/services.html
@@ -282,6 +282,35 @@
                         <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
                     </div>
                 </div>
+
+
+                 <div class="product-card">
+                    <div class="product-img">
+                        <img src="Avocado Package.png" alt="One acre Avocado Package">
+                    </div>
+                    <div class="product-info">
+                        <h3>One Acre Avocado Package</h3>
+                       <B> <p class="product-description">SERVICES</p></B>
+                         <P>.Farm Layout and planning</P>
+                        <p>.Manuaring/mixing</p>
+                        <p>.Digging holes</p>
+                        <p>.Grafted Seedlings</p>
+                        <p>.Spray programs</p>
+                        <p>.Technical Agronomical Support</p>
+                        <p>.Pesticides and fungicides</p>
+                        <div class="price-list">
+                            <div class="price-item">
+                               <B> <span class="price-item-name">FOR THE PACKAGE</span></B>
+                                <H3><B><span class="price-item-price">104,000 KSH</span></B></H3>
+                            </div>
+                    
+                        </div>
+                        <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
+                    </div>
+                </div>
+
+
+
                 
             </div>
         </div>
@@ -501,6 +530,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
