--- a/services.html
+++ b/services.html
@@ -227,7 +227,7 @@
                         <div class="price-list">
                             <div class="price-item">
                               <B>  <span class="price-item-name">FOR THE PACKAGE</span></B>
-                               <B><H3> <span class="price-item-price">84,000 KSh</span></H3></B>
+                               <B><H3> <span class="price-item-price">84,000 KSH</span></H3></B>
                            
                             </div>
                         </div>
@@ -251,7 +251,7 @@
                         <p>.Pesticides and fungicides</p>
                         <div class="price-item">
                            <B> <span class="price-item-name">FOR THE PACKAGE</span></B>
-                           <H3><B> <span class="price-item-price">225,000 KSh</span></B></H3>
+                           <H3><B> <span class="price-item-price">225,000 KSH</span></B></H3>
                         </div>
                         
                         <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
@@ -530,6 +530,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
