--- a/drip-irrigation.html
+++ b/drip-irrigation.html
@@ -40,7 +40,7 @@
 <section class="container" style="padding:70px 0;">
     <div style="max-width:900px; margin:auto;">
 
-        <img src="images/drip-irrigation.webp" alt="Drip Irrigation System"
+        <img src="drip.png" alt="Drip Irrigation System"
              style="width:100%; border-radius:12px; margin-bottom:30px;">
 
         <p>
