--- a/farmers-training.html
+++ b/farmers-training.html
@@ -41,7 +41,7 @@
 <section class="container" style="padding:70px 0;">
     <div style="max-width:900px; margin:auto;">
 
-        <img src="images/farmers-training.webp" alt="Farmers Training Session"
+        <img src="training.JPG" alt="Farmers Training Session"
              style="width:100%; border-radius:12px; margin-bottom:30px;">
 
         <p>
