--- a/spray-rotary.html
+++ b/spray-rotary.html
@@ -41,7 +41,7 @@
 <section class="container" style="padding:70px 0;">
     <div style="max-width:900px; margin:auto;">
 
-        <img src="images/spray-rotary.webp" alt="Crop Spraying Services"
+        <img src="spray.png" alt="Crop Spraying Services"
              style="width:100%; border-radius:12px; margin-bottom:30px;">
 
         <p>
