--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <!-- Quality Seedlings -->
                 <div class="product-card">
                     <div class="product-img">
-                        <img src="QSDD.webp" alt="Quality Seedlings">
+                        <img src="PIXIE SEEDLING.JPG" alt="Quality Seedlings">
                     </div>
                     <div class="product-info">
                         <h3>Quality Seedlings</h3>
@@ -245,4 +245,5 @@
 </body>
 
 </html>
+
 
