--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="product-info">
                         <h3>Quality Seedlings</h3>
                         <p class="product-description">Avocado, mango, and pixie seedlings. Disease-resistant varieties with high yield potential. Grafted for early fruiting.</p>
-                        <a href="products.html#seedlings" class="btn">View All Seedlings</a>
+                        <a href="services.html#seedlings" class="btn">View All Seedlings</a>
                     </div>
                 </div>
                 
@@ -245,6 +245,7 @@
 </body>
 
 </html>
+
 
 
 
