--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="product-info">
                         <h3>Fresh Pixie Juice</h3>
                         <p class="product-description">100% natural pixie juice, no preservatives or additives. Rich in vitamins and antioxidants. Available in various sizes.</p>
-                        <a href="products.html#juices" class="btn">Order Now</a>
+                        <a href="contact.html#juices" class="btn">Order Now</a>
                     </div>
                 </div>
             </div>
@@ -245,6 +245,7 @@
 </body>
 
 </html>
+
 
 
 
