--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Hero Section -->
 <section class="hero" style="
-    background: linear-gradient(rgba(26, 71, 42, 0.8), rgba(26, 71, 42, 0.9)), url('BCKG.webp');
+    background: url('BCKG.webp');
     background-size: cover;
     background-position: center;
     color: white;
@@ -55,7 +55,7 @@
     <div class="container">
         <div class="hero-content">
             <h1>Aaron Agronomy Services</h1>
-            <p>Professional farming solutions, quality seedlings, and expert farm assessment services .Supporting $ empowering young farmers through sustainable farming. </p>
+            <p>Supporting and empowering young farmers through sustainable farming. </p>
             <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; margin-top: 30px;">
                 <a href="products.html" class="btn">View Products</a>
                 <a href="services.html" class="btn">Our Services</a>
@@ -245,6 +245,7 @@
 </body>
 
 </html>
+
 
 
 
