--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Hero Section -->
 <section class="hero" style="
-    background: url('BCKG.webp');
+    background: url('index.png');
     background-size: cover;
     background-position: center;
     color: white;
@@ -76,7 +76,7 @@
                 <!-- Fresh Pixies -->
                 <div class="product-card">
                     <div class="product-img">
-                        <img src="frPX.webp" alt="Fresh Pixies">
+                        <img src="fresh.png" alt="Fresh Pixies">
                     </div>
                     <div class="product-info">
                         <h3>Fresh Pixies</h3>
@@ -245,6 +245,7 @@
 </body>
 
 </html>
+
 
 
 
