--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <!-- Pixie Juice -->
                 <div class="product-card">
                     <div class="product-img">
-                        <img src="JUICE.webp" alt="Fresh Pixie Juice">
+                        <img src="pixiejuice.JPG" alt="Fresh Pixie Juice">
                     </div>
                     <div class="product-info">
                         <h3>Fresh Pixie Juice</h3>
@@ -245,6 +245,7 @@
 </body>
 
 </html>
+
 
 
 
