--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Hero Section -->
 <section class="hero" style="
-    background: url('index.png');
+    background: url('index(2).png');
     background-size: cover;
     background-position: center;
     color: white;
@@ -55,7 +55,8 @@
     <div class="container">
         <div class="hero-content">
             <h1>Aaron Agronomy Services</h1>
-            <p>Supporting and empowering young farmers through sustainable farming. </p>
+            <h2><p>The home of sustainable farming</p></h2>
+           <i> <P>Supporting & empowering young farmers through sustainable farming </p></i>
             <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; margin-top: 30px;">
                 <a href="products.html" class="btn">View Products</a>
                 <a href="services.html" class="btn">Our Services</a>
@@ -245,6 +246,7 @@
 </body>
 
 </html>
+
 
 
 
