--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <div class="container">
         <div class="hero-content">
             <h1>Aaron Agronomy Services</h1>
-            <h2><p>The home of sustainable farming</p></h2>
-           <i> <P>Supporting & empowering young farmers through sustainable farming </p></i>
+            <h2><p>The home of sustainable farming,
+           Supporting & empowering young farmers through sustainable farming </p></h2>
             <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; margin-top: 30px;">
                 <a href="products.html" class="btn">View Products</a>
                 <a href="services.html" class="btn">Our Services</a>
@@ -246,6 +246,7 @@
 </body>
 
 </html>
+
 
 
 
