--- a/products.html
+++ b/products.html
@@ -126,7 +126,7 @@
                 
                 <div class="product-card">
                     <div class="product-img">
-                        <img src="pixie3.jpeg" alt="Bulk Pixies">
+                        <img src="bulk.png" alt="Bulk Pixies">
                     </div>
                     <div class="product-info">
                         <h3>Bulk Pixies</h3>
@@ -194,6 +194,7 @@
 </body>
 
 </html>
+
 
 
 
