--- a/services.html
+++ b/services.html
@@ -262,6 +262,7 @@
                         <p><b>FOR THE PACKAGE</b></p>
                     </div>
                     <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
+                    <a href="" class="btn" style="margin-top: 20px;">86,000</a>
                 </div>
             </div>
 
@@ -345,6 +346,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
