--- a/services.html
+++ b/services.html
@@ -258,11 +258,10 @@
                     <p>✓ Technical Agronomical Support</p>
                     <p>✓ Pesticides and fungicides</p>
                     <div class="price-item">
-                        <h3><b>86,000 KSH</b></h3>
-                        <p><b>FOR THE PACKAGE</b></p>
-                    </div>
+                        
+                        <h3>FOR THE PACKAGE</h3>
                     <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
-                    <a href="" class="btn" style="margin-top: 20px;">86,000</a>
+                    <a href="" class="btn" style="margin-top: 20px;">KSH 86,000</a>
                 </div>
             </div>
 
@@ -346,6 +345,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
