--- a/services.html
+++ b/services.html
@@ -263,6 +263,7 @@
                     <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
                     <a href="" class="btn" style="margin-top: 20px;">KSH 86,000</a>
                 </div>
+                </div>   
             </div>
 
             <div class="product-card">
@@ -345,6 +346,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
