--- a/LOGINS.html
+++ b/LOGINS.html
@@ -881,7 +881,7 @@
         <div class="container header-container">
             <a href="index.html" class="logo-link">
                 <div class="logo-img">
-                    <img src="MKULIMA.png" alt="Aaron Agronomy Services Logo" onerror="this.style.display='none'">
+                    <img src="aaron logo.webp" alt="Aaron Agronomy Services Logo" onerror="this.style.display='none'">
                 </div>
                 <div class="system-title">MKULIMA DIGITAL</div>
             </a>
@@ -4791,4 +4791,5 @@ formatFileSize(bytes) {
         }
     });
 </script>
+
 
