--- a/LOGINS.html
+++ b/LOGINS.html
@@ -170,13 +170,11 @@
             padding: 25px 0;
             min-height: calc(100vh - 80px);
         }
-.responsive-img {
-    width: 100%;
+.logo-icon {
+    width: 48px;
     height: auto;
-    max-width: 100%;
-    object-fit: contain;
-    display: block;
 }
+
 
         .dashboard-grid {
             display: grid;
@@ -898,7 +896,7 @@
             </button>
             
             <nav class="nav-links" id="navLinks">
-                 <img src="MKULIMA.png" alt="Mkulima Digital Image" class="responsive-img">
+                 <img src="MKULIMA.png" class="logo-icon">
                 <a href="#" id="navDashboard" class="active"><i class="fas fa-home"></i> Dashboard</a>
                 <a href="#" id="navReports"><i class="fas fa-file-alt"></i> Reports</a>
                 <a href="#" id="navSales"><i class="fas fa-chart-line"></i> Sales</a>
@@ -4801,6 +4799,7 @@ formatFileSize(bytes) {
         }
     });
 </script>
+
 
 
 
