--- a/LOGINS.html
+++ b/LOGINS.html
@@ -173,7 +173,10 @@
 .logo-icon {
     width: 48px;
     height: auto;
+    display: block;
+    margin: 0 auto;
 }
+
 
 
         .dashboard-grid {
@@ -4799,6 +4802,7 @@ formatFileSize(bytes) {
         }
     });
 </script>
+
 
 
 
