--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="product-info">
                         <h3>Quality Seedlings</h3>
                         <p class="product-description">Avocado, mango, and pixie seedlings. Disease-resistant varieties with high yield potential. Grafted for early fruiting.</p>
-                        <a href="services.html#seedlings" class="btn">View All Seedlings</a>
+                        <a href="services.html#seedlings" class="btn">View</a>
                         <a href="services.html#pixies" class="btn">KSH 200</a>
                     </div>
                 </div>
@@ -251,6 +251,7 @@
 </body>
 
 </html>
+
 
 
 
