--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </p>
                 <a href="farm-assessment.html" class="btn btn-small">Learn More</a>
             </div>
-
+        </div>
             <!-- Drip Irrigation -->
             <div class="service-card">
                 <div class="service-icon">
@@ -153,7 +153,7 @@
                 </p>
                 <a href="drip-irrigation.html" class="btn btn-small">Learn More</a>
             </div>
-
+        </div>
             <!-- Farmers Training -->
             <div class="service-card">
                 <div class="service-icon">
@@ -166,7 +166,7 @@
                 </p>
                 <a href="farmers-training.html" class="btn btn-small">Learn More</a>
             </div>
-
+</div>
            
 
         </div>
@@ -244,6 +244,7 @@
 </body>
 
 </html>
+
 
 
 
