--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
     
            <!-- Services Section -->
 <section>
+    <div class="section-title">
+                <h2>Our Services</h2>
     <div class="container">
         <div class="services-grid">
 
@@ -241,6 +243,7 @@
 </body>
 
 </html>
+
 
 
 
