--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 <section>
     <div class="section-title">
                 <h2>Our Services</h2>
+    </div>
     <div class="container">
         <div class="services-grid">
 
@@ -243,6 +244,7 @@
 </body>
 
 </html>
+
 
 
 
