--- a/index.html
+++ b/index.html
@@ -172,6 +172,34 @@
     </div>
 </section>
 
+     <!-- Planting Packages -->
+<section id="seedlings" class="product-category" style="background-color: var(--light-green); padding: 60px 0;">
+    <div class="container">
+        <h2 class="category-title">PLANTING PACKAGES</h2>
+        <div class="product-grid">
+            <div class="product-card">
+                <div class="product-img">
+                    <img src="Pixie Package.png" alt="One Acre Pixie Package">
+                </div>
+                <div class="product-info">
+                    <h3>One Acre Pixie Package</h3>
+                    <p class="product-description"><b>SERVICES</b></p>
+                    <p>✓ Farm Layout and planting</p>
+                    <p>✓ Manuring/mixing</p>
+                    <p>✓ Digging holes</p>
+                    <p>✓ Grafted seedlings</p>
+                    <p>✓ Spray programs</p>
+                    <p>✓ Technical Agronomical Support</p>
+                    <p>✓ Pesticides and fungicides</p>
+                    <div class="price-item">
+                        <h3><b>FOR THE PACKAGE</b></h3>
+                        
+                    </div>
+                    <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
+                    <a href="contact.html" class="btn" style="margin-top: 20px;">ksh 104,000</a>
+                
+            </div>
+            </div>
 
 
     <!-- CTA Section -->
@@ -244,6 +272,7 @@
 </body>
 
 </html>
+
 
 
 
