--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@
                     <a href="contact.html" class="btn" style="margin-top: 20px;">ksh 104,000</a>
                 </div>
             </div>
+            
+    </div>
+</section>
+
 
     <!-- CTA Section -->
     <section style="background-color: var(--light-green);">
@@ -317,6 +321,7 @@
 </body>
 
 </html>
+
 
 
 
