--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <a href="contact.html" class="btn" style="margin-top: 20px;">ksh 104,000</a>
                 </div>
             </div>
-            
+        </div>   
     </div>
 </section>
 
@@ -321,6 +321,7 @@
 </body>
 
 </html>
+
 
 
 
