--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
      <!-- Planting Packages -->
 <section id="seedlings" class="product-category" style="background-color: var(--light-green); padding: 60px 0;">
     <div class="container">
-        <h2 class="category-title">PLANTING PACKAGES</h2>
+        <h2 class="section-title">PLANTING PACKAGES</h2>
         <div class="product-grid">
             <div class="product-card">
                 <div class="product-img">
@@ -321,6 +321,7 @@
 </body>
 
 </html>
+
 
 
 
