--- a/drip-irrigation.html
+++ b/drip-irrigation.html
@@ -6,7 +6,80 @@
     <title>Drip Irrigation Installation | Aaron Agronomy Services</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-</head>
+
+    <style>
+              table {
+            width: 100%;
+            border-collapse: collapse;
+            background: #ffffff;
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+        }
+
+        table thead {
+            background: #1a472a;
+            color: #ffffff;
+        }
+
+        table th, table td {
+            padding: 16px;
+            text-align: center;
+        }
+
+        table td:first-child {
+            font-weight: bold;
+            text-align: left;
+        }
+
+        table tbody tr:nth-child(even) {
+            background: #f6f9f7;
+        }
+
+        table tbody tr:hover {
+            background: #e8f3ec;
+            transform: scale(1.01);
+            transition: 0.3s ease;
+        }
+
+        .btn {
+            display: inline-block;
+            margin-top: 40px;
+            background: #1a472a;
+            color: #ffffff;
+            padding: 14px 35px;
+            border-radius: 30px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: 0.3s ease;
+        }
+
+        .btn:hover {
+            background: #145c35;
+        }
+
+        footer {
+            background: #1a472a;
+            color: #ffffff;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 50px;
+        }
+
+        @media (max-width: 768px) {
+            .hero h1 {
+                font-size: 28px;
+            }
+
+            table th, table td {
+                padding: 12px;
+                font-size: 14px;
+            }
+        }
+    
+
+    </style>
+    </head>
 <body>
  <header>
         <div class="container header-container">
@@ -60,6 +133,54 @@
         </p>
 
         <a href="contact.html" class="btn" style="margin-top:20px;">Contact Us</a>
+    <h2>Drip Irrigation Packages</h2>
+        <p style="text-align:center; margin-bottom:30px;">
+            Prices are classified based on acreage and number of lines per bed.
+        </p>
+
+        <div style="overflow-x:auto;">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Size / Lines Per Bed</th>
+                        <th>1 Line</th>
+                        <th>2 Lines</th>
+                        <th>3 Lines</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1 Acre (4100 sqm)</td>
+                        <td>KES 65,000</td>
+                        <td>KES 95,000</td>
+                        <td>KES 130,000</td>
+                    </tr>
+                    <tr>
+                        <td>½ Acre (2000 sqm)</td>
+                        <td>KES 30,000</td>
+                        <td>KES 45,000</td>
+                        <td>KES 60,000</td>
+                    </tr>
+                    <tr>
+                        <td>¼ Acre (1000 sqm)</td>
+                        <td>KES 16,000</td>
+                        <td>KES 25,000</td>
+                        <td>KES 35,000</td>
+                    </tr>
+                    <tr>
+                        <td>⅛ Acre (500 sqm)</td>
+                        <td>KES 10,000</td>
+                        <td>KES 15,000</td>
+                        <td>KES 20,000</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div style="text-align:center;">
+            <a href="contact.html" class="btn">Request Quotation</a>
+        </div>
+
     </div>
 </section>
 
